fix(gateway): 대역을 미리 풀고 전달 값 형식 검사
대역을 요청마다 다시 풀고 있었다. 그 파싱이 요청 경로에 붙고, 주소처럼 생긴 이름이 섞이면 이름 조회까지 거기서 일어난다. 기동 때 한 번 풀어 둔다.

전달 값이 주소로 안 읽혀도 그대로 키로 썼다. 값을 바꿔가며 키를 무한히 만들면 리미터가 포화하고 정상 요청도 막힌다.

설정과 판정을 나눴다. 설정은 레코드로 두고 판정이 정적 팩토리를 갖는다.

순위 하네스가 무엇을 안 재는지 적었다 — 스크립트를 직접 부르므로 반응형 경로는 다른 시험이 진다.

Refs: CY-404